agentforce/1.2/modules/ROOT/pages/configuring-agent-operations.adoc
= Configuring Agent Operations for Agentforce Connector 1.2 

Use these guidelines to configure the *Start agent conversation*, *Continue agent conversation*, and *End agent conversation* operations for Agentforce Connector.


[[start-agent]]
== Configure the Start Agent Conversation Operation

The *Start agent conversation* operation establishes the connection between the app and the agent. This is the first step to enable an external application to interact with the AI agent.

include::connectors::partial$t-configure-operations.adoc[]
* *Display Name*
+
Display name for the operation.
* *Connector Configuration*
+
Select the associated configuration for the connector.
* *Agent list*
+
Select the agent to invoke. The list shows only agents that are currently active in the org. The connector filters out any agents that aren't in the `active` state.
* *Bypass User*
+
Select whether to use the agent-assigned user instead of the logged-in user. Setting this to `True` allows the agent to use its own permissions to access the necessary Data Cloud assets. This enables the agent to answer the user's query even if you lack direct access.

=== Output

The operation returns a session ID for the interaction between the app and the agent. The session ID is used as an input for the *Continue agent conversation* operation.

[[continue-agent]]
== Configure the Continue Agent Conversation Operation

The *Continue agent conversation* operation surfaces the message from the MuleSoft application to the agent. The agent maintains the context of the conversation and provides a relevant response (or actions) according to the user's input.

include::connectors::partial$t-configure-operations.adoc[]
* *Display Name*
+
Display name for the operation.
* *Connector Configuration*
+
Select the associated configuration for the connector.
* *Message*
+
Enter plain text instructions to help the agent make decisions for different use cases.
* *Session ID*
+
Enter the session ID that was returned with the *Start agent conversation* operation. This is required to send the prompt defined in the *Message* field to the agent.

[[end-agent]]
== Configure the End Agent Conversation Operation

Use the *End agent conversation* operation to close the session after the agent responds. 

[NOTE]
Sessions are closed automatically after three days of inactivity.

include::connectors::partial$t-configure-operations.adoc[]
* *Display Name*
+
Display name for the operation.
* *Connector Configuration*
+
Select the associated configuration for the connector.
* *Session ID*
+
Enter the session ID that was returned with the *Start agent conversation* operation. 

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:agentforce-connector-reference.adoc[Agentforce Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
